Fix mistake with requirements file on commit #1996dd2

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ greenlet==1.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+PyMySQL==1.0.2
+python-dotenv==0.17.0
 SQLAlchemy==1.4.5
 Werkzeug==1.0.1
