--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+aniso8601==9.0.1
+attrs==20.3.0
 click==7.1.2
 Flask==1.1.2
+flask-restplus==0.13.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.0.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+jsonschema==3.2.0
 MarkupSafe==1.1.1
 PyMySQL==1.0.2
+pyrsistent==0.17.3
 python-dotenv==0.17.0
+pytz==2021.1
+six==1.15.0
 SQLAlchemy==1.4.5
 Werkzeug==1.0.1
