--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ aniso8601==9.0.1
 attrs==20.3.0
 click==7.1.2
 Flask==1.1.2
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.1.0
 flask-restplus==0.13.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.0.0
@@ -9,6 +11,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 jsonschema==3.2.0
 MarkupSafe==1.1.1
+PyJWT==2.0.1
 PyMySQL==1.0.2
 pyrsistent==0.17.3
 python-dotenv==0.17.0
